[mirotalksfu] - add API join endpoint + swagger doc
